--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -18,3 +18,18 @@
   box-shadow: 0 0 0 1px rgba(0,0,0, 0.15) inset, 0 0 1px rgba(0,0,0, 0.20) inset;
   border-color: #000;
 }
+
+.pix-round-btn {
+  height: 1rem;
+  width: 1rem;
+  border: none;
+  border-radius: 50%;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pix-round-btn:hover,
+.pix-round-btn:active  {
+  background: #e8eaec;
+}
